--- a/unit3/linear_regression.ipynb
+++ b/unit3/linear_regression.ipynb
@@ -60,6 +60,91 @@
   },
   {
    "cell_type": "markdown",
+   "id": "345831ce-58ff-43f5-9a02-266365a78123",
+   "metadata": {},
+   "source": [
+    "## Using equations in the lecture slides to calculate the slope and intercept."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "135d3694-b16b-4c8b-bb63-738b7125ac6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_mean = \n",
+    "Y_mean = \n",
+    "X_anom = \n",
+    "Y_anom = "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "fb9bc6b2-44fe-4ca6-8ce9-58384979f931",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A: [0 1 2 3 4 5 6 7 8 9] B: [2. 2. 2. 2. 2. 2. 2. 2. 2. 2.]\n",
+      "Add: [ 2.  3.  4.  5.  6.  7.  8.  9. 10. 11.]\n",
+      "Subtraction: [-2. -1.  0.  1.  2.  3.  4.  5.  6.  7.]\n",
+      "division: [0.  0.5 1.  1.5 2.  2.5 3.  3.5 4.  4.5]\n",
+      "multiplication: [ 0.  2.  4.  6.  8. 10. 12. 14. 16. 18.]\n",
+      "sum of all elements in an array: 45\n",
+      "square of each element in an array: [4. 4. 4. 4. 4. 4. 4. 4. 4. 4.]\n",
+      "cube of each element in an array: [8. 8. 8. 8. 8. 8. 8. 8. 8. 8.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# define two numpy arrays\n",
+    "datA = np.arange(10)\n",
+    "datB = np.zeros(10)+2\n",
+    "print('A:',datA,'B:',datB)\n",
+    "# add,subtraction,multiplication,division\n",
+    "dat = datA+datB\n",
+    "print('Add:',dat)\n",
+    "dat = datA-datB\n",
+    "print('Subtraction:',dat)\n",
+    "dat = datA/datB\n",
+    "print('division:',dat)\n",
+    "# compute the element-wise product\n",
+    "datAB = datA*datB\n",
+    "print('multiplication:',datAB)\n",
+    "# compute the sum of the array\n",
+    "datA_sum = np.sum(datA)\n",
+    "print('sum of all elements in an array:',datA_sum)\n",
+    "# compute the square, cube, or nth power of the array\n",
+    "datB_sq = datB**2\n",
+    "print('square of each element in an array:',datB_sq)\n",
+    "datB_cu = datB**3\n",
+    "print('cube of each element in an array:',datB_cu)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5cd316a-0398-405c-8f7d-9e7295c4e1a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now compute the covariance of X and Y\n",
+    "cov_XY =\n",
+    "# Now compute the variance of X and Y\n",
+    "var_X = \n",
+    "# Now compute the slope\n",
+    "slope =\n",
+    "# Now compute the intercept\n",
+    "intercept =\n",
+    "print(slope,intercept)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "14519b4e-84e7-4c35-9d4a-68e736c807c7",
    "metadata": {},
    "source": [
