--- a/unit3/linear_regression.ipynb
+++ b/unit3/linear_regression.ipynb
@@ -677,11 +677,11 @@
     "\n",
     "<span style=\"font-size: 24px; color: red; font-weight: bold;\">5. Add the linear regression line to the scatterplot. (Present: Group 4)</span>\n",
     "\n",
-    "<span style=\"font-size: 24px; color: red; font-weight: bold;\">6. Add the label for the linear regression line. (Present: Group 5)</span>\n",
+    "<span style=\"font-size: 24px; color: red; font-weight: bold;\">6. Add the label or a textbox to show the function of the linear regression line. (Present: Group 5)</span>\n",
     "\n",
-    "<span style=\"font-size: 24px; color: red; font-weight: bold;\">7. Add the mean of x1 and the mean of y1 to the scatterplot. (Present: Group 6)</span>\n",
+    "<span style=\"font-size: 24px; color: red; font-weight: bold;\">7. Add the mean of x1 and the mean of y1 to the scatterplot. (Present: Group 5)</span>\n",
     "\n",
-    "<span style=\"font-size: 24px; color: red; font-weight: bold;\">8. How would you address the nonlinearity in the relationship between x1 and y1. (Present: Group 7)</span>"
+    "<span style=\"font-size: 24px; color: red; font-weight: bold;\">8. How would you address the nonlinearity in the relationship between x1 and y1. (Present: Group 6)</span>"
    ]
   },
   {
@@ -1081,13 +1081,13 @@
    "source": [
     "## Interpret the results of fitting the data to the regression model\n",
     "\n",
-    "<span style=\"font-size: 24px; color: red; font-weight: bold;\">9. Extract the number of the regression parameters and write down the regression function. (Present: Group 7)</span>\n",
+    "<span style=\"font-size: 24px; color: red; font-weight: bold;\">9. Extract the number of the regression parameters and write down the regression function. (Present: Group 6)</span>\n",
     "\n",
-    "<span style=\"font-size: 24px; color: red; font-weight: bold;\">10. Extract the number of the coefficient of determination $R^2$. (Present: Group 7)</span>\n",
+    "<span style=\"font-size: 24px; color: red; font-weight: bold;\">10. Extract the number of the coefficient of determination $R^2$. (Present: Group 6)</span>\n",
     "\n",
-    "<span style=\"font-size: 24px; color: red; font-weight: bold;\">11. Add the curvilinear regression line (predicted y1) to the scatterplot. (Present: Group 8)</span>\n",
+    "<span style=\"font-size: 24px; color: red; font-weight: bold;\">11. Add the curvilinear regression line (predicted y1) to the scatterplot. (Present: Group 7 and 8)</span>\n",
     "\n",
-    "<span style=\"font-size: 24px; color: red; font-weight: bold;\">12. Add the label for the curvilinear regression line. (Present: Group 8)</span>"
+    "<span style=\"font-size: 24px; color: red; font-weight: bold;\">12. Add the label or a textbox to show the function of the curvilinear regression line. (Present: Group 7 and 8)</span>"
    ]
   },
   {
