--- a/unit3/string_for_if.ipynb
+++ b/unit3/string_for_if.ipynb
@@ -283,7 +283,9 @@
    "metadata": {},
    "source": [
     "<span style=\"font-size: 24px; color: green; font-weight: bold;\">Exercise</span>\n",
-    "### print index of 0 to 10 and the corresponding number of the array <span style=\"font-size: 24px; color: red; font-weight: bold;\">b</span> using for loop"
+    "### 1. print index of 0 to 10 and the corresponding number of the array <span style=\"font-size: 24px; color: red; font-weight: bold;\">b</span> using for loop\n",
+    "\n",
+    "### 2. Write a program that calculates the sum of all numbers from 1 to 10."
    ]
   },
   {
@@ -304,6 +306,14 @@
     "b = np.arange(11)*2\n",
     "print(b)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "625d6e4b-48e0-4c04-a91c-4762073228a0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -436,29 +446,52 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44c080a4-a0d9-40d4-93db-cfa4ad181778",
+   "id": "55791702-33bc-4305-a684-624f8b85b912",
    "metadata": {},
    "source": [
-    "<span style=\"font-size: 24px; color: green; font-weight: bold;\">Exercise</span>\n",
-    "### find elements in variable <span style=\"font-size: 24px; color: red; font-weight: bold;\">a</span> that is not equal to 10\n",
-    "### print the indexing in a where values are not equal to 10\n",
-    "### print the elements in a where they are not equal to 10"
+    "## finding the remainder of a division\n",
+    "### (%): This operator returns the remainder directly."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "f56bf8c0-2485-49c9-aa4d-f333c6c880f3",
+   "execution_count": 5,
+   "id": "f62af4b6-2de2-4c89-8e43-485f02eb379e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
-    "a = np.array([0,10,10,10,0,0,0,0,10])"
+    "a = 10\n",
+    "b = 2\n",
+    "print(a % b)\n",
+    "\n",
+    "a = 10\n",
+    "b = 3\n",
+    "print(a % b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44c080a4-a0d9-40d4-93db-cfa4ad181778",
+   "metadata": {},
+   "source": [
+    "<span style=\"font-size: 24px; color: green; font-weight: bold;\">Exercise</span>\n",
+    "### 1. find elements in variable <span style=\"font-size: 24px; color: red; font-weight: bold;\">a</span>, a = np.array([0,10,10,10,0,0,0,0,10]). Print the indexing in a where values are not equal to 10. Print the elements in a where they are not equal to 10.\n",
+    "### 2. Iterate through the elements in variable <span style=\"font-size: 24px; color: red; font-weight: bold;\">a</span>, a=np.arange(100)+1. If a number is even, print \"even\" and the number. If a number is odd, print \"odd\" and the number."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b68bf9de-7bbe-44ff-99f2-b9ec9f147ff6",
+   "id": "85821a9d-3554-43c4-9ad6-cff99acd97f8",
    "metadata": {},
    "outputs": [],
    "source": []
